# pixi_dir

./: Dockerfile  notebook.ipynb  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  entrypoint.sh
