[project]
authors = [{name = "avanscoyoc", email = "amy.e.van.scoyoc@gmail.com"}]
dependencies = []
name = "pixi_dir"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
pixi_dir = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
jupyter = ">=1.1.1,<2"
ipython = ">=9.3.0,<10"
ipykernel = ">=6.29.5,<7"
pixi-kernel = ">=0.6.3,<0.7"
numpy = ">=2.3.0,<3"
pandas = ">=2.3.0,<3"
matplotlib = ">=3.10.3,<4"
seaborn = ">=0.13.2,<0.14"
scikit-learn = ">=1.7.0,<2"
